--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,8 @@ set(CMAKE_C_STANDARD 90)
 include_directories(*)
 
 add_executable(LabAssemblerProject
-        main.h main.c cell/cell.c)
+        libraries.h
+        main.h
+        main.c
+        cell/cell.c
+        cell/cell.h)
