--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,71 +3,70 @@ project(LabAssemblerProject C)
 
 set(CMAKE_C_STANDARD 90)
 
-#add_subdirectory(pre)
-#add_subdirectory(assembly)
+add_subdirectory(src)
 
-add_executable(main
-        main.c
-        main.h
-
-        root.h
-
-        libs/linkedlist/linked_list.h
-        libs/linkedlist/linked_list.c
-
-        libs/data/data.c
-        libs/data/data.h
-
-        libs/io/io.c
-        libs/io/io.h
-
-        libs/instruction/instruction.c
-        libs/instruction/instruction.h
-
-        libs/label/label.c
-        libs/label/label.h
-
-        libs/macro/macro.c
-        libs/macro/macro.h
-
-        assembly/assembly.c
-        assembly/assembly.h
-
-        assembly/phase1.c
-        assembly/phase2.c
-
-        pre/pre.h
-        pre/pre.c
-
-        libs/data_types.h
-        )
-
-add_executable(test
-        root.h
-
-        libs/linkedlist/linked_list.h
-        libs/linkedlist/linked_list.c
-
-        libs/data/data.c
-        libs/data/data.h
-
-        libs/io/io.c
-        libs/io/io.h
-
-        libs/instruction/instruction.c
-        libs/instruction/instruction.h
-
-        libs/label/label.c
-        libs/label/label.h
-
-        libs/macro/macro.c
-        libs/macro/macro.h
-
-        assembly/assembly.c
-        assembly/assembly.h
-
-        assembly/phase1.c
-
-        pre/pre.h
-        pre/pre.c
-        libs/data_types.h assembly/phase2.c test.c)
+#add_executable(main
+#        src/main/main.c
+#        src/main/main.h
+#
+#        src/root.h
+#
+#        src/libs/linkedlist/linked_list.h
+#        src/libs/linkedlist/linked_list.c
+#
+#        src/libs/data/data.c
+#        src/libs/data/data.h
+#
+#        src/libs/io/io.c
+#        src/libs/io/io.h
+#
+#        src/libs/instruction/instruction.c
+#        src/libs/instruction/instruction.h
+#
+#        src/libs/label/label.c
+#        src/libs/label/label.h
+#
+#        src/libs/macro/macro.c
+#        src/libs/macro/macro.h
+#
+#        src/assembly/assembly.c
+#        src/assembly/assembly.h
+#
+#        src/assembly/phase1.c
+#        src/assembly/phase2.c
+#
+#        src/pre/pre.h
+#        src/pre/pre.c
+#
+#        src/libs/data_types.h
+#        )
+#
+#add_executable(test
+#        src/root.h
+#
+#        src/libs/linkedlist/linked_list.h
+#        src/libs/linkedlist/linked_list.c
+#
+#        src/libs/data/data.c
+#        src/libs/data/data.h
+#
+#        src/libs/io/io.c
+#        src/libs/io/io.h
+#
+#        src/libs/instruction/instruction.c
+#        src/libs/instruction/instruction.h
+#
+#        src/libs/label/label.c
+#        src/libs/label/label.h
+#
+#        src/libs/macro/macro.c
+#        src/libs/macro/macro.h
+#
+#        src/assembly/assembly.c
+#        src/assembly/assembly.h
+#
+#        src/assembly/phase1.c
+#
+#        src/pre/pre.h
+#        src/pre/pre.c
+#        src/libs/data_types.h src/assembly/phase2.c src/main/test.c)
